# birdseye

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  README.md  README.rst  Untitled.ipynb  example_usage.py  make_release.sh  package.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: workflow.yml
birdseye/: __init__.py  __main__.py  app.py  bird.py  cheap_repr.py  clear_db.py  db.py  import_hook.py  ipython.py  server.py  trace_module.py  trace_module_deep.py  tracer.py  utils.py
birdseye/static/: index.html
birdseye/static/css/: jquery-ui.min.css  main.css
birdseye/static/css/proton/: style.css
birdseye/static/js/: call.js
birdseye/static/js/libs/: highlight.pack.js
birdseye/templates/: base.html  call.html  call_base.html  call_core.html  file.html  function.html  index.html  info_panel.html  ipython_call.html  ipython_iframe.html
docs/: conf.py  configuration.rst  contributing.rst  how_it_works.rst  index.rst  integrations.rst  limitations.rst  quickstart.rst  tips.rst
docs/_static/: custom.css
gulp/: .eslintrc.json  gulpfile.js  install-deps.sh
misc/: clear_db.py  mypy_filter.py  mypy_ignore.txt  test.sh  travis_screenshot.py  travis_test.sh
test_scripts/: gold.py  traced.py  traced_module.py
tests/: __init__.py  golden_script.py  test_birdseye.py  test_db.py  test_import_hook.py  test_interface.py  test_repr.py  test_tracer.py  test_utils.py  utils.py
tests/future_tests/: with_future.py  without_future.py
tests/golden-files/2.7/: calls.json  gold.json  golden_script.json
tests/golden-files/3.11/: traced.json
tests/golden-files/3.12/: gold.json  traced.json
tests/golden-files/3.13/: gold.json  traced.json
tests/golden-files/3.5/: calls.json  gold.json  golden_script.json  traced.json  traced_module.json
tests/golden-files/3.6/: calls.json  gold.json  golden_script.json  traced.json  traced_module.json
tests/golden-files/3.7/: gold.json  traced.json
tests/golden-files/3.8/: gold.json  traced.json
tests/golden-files/3.9/: gold.json  traced.json
tests/golden-files/pypy2.7/: gold.json
tests/golden-files/pypy3.5/: gold.json  traced.json
