[build-system]
requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "birdseye/version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::outdated.OutdatedPackageWarning",
    "ignore::cheap_repr.ReprSuppressedWarning",
]
