[metadata]
name = birdseye
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Graphical Python debugger which lets you easily view the values of all evaluated expressions
url = http://github.com/alexmojaki/birdseye
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Debuggers

[options]
packages = birdseye
install_requires =
    Flask
    flask-humanize
    sqlalchemy
    asttokens
    littleutils>=0.2
    cheap_repr
    outdated
    cached_property

setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
python_requires = >=3.8
include_package_data = True

test_suite = tests

[options.extras_require]
tests =
    bs4
    selenium
    pytest
    numpy
    pandas
    gunicorn
    twine
    build

[options.entry_points]
console_scripts =
    birdseye = birdseye.server:main

[bdist_wheel]
universal=1
