[metadata]
name = birdseye
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Minimal version of birdseye for futurecoder
url = http://github.com/alexmojaki/futurecoder
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Debuggers

[options]
packages = birdseye
install_requires =
    asttokens
    littleutils>=0.2
    cheap_repr

setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
python_requires = >=3.8
include_package_data = True

test_suite = tests

[options.extras_require]
tests =
    bs4
    selenium
    pytest
